adding reports
