# reports/models.py
@@ -1,0 +1,24 @@
+from django.db import models
+from django.contrib.auth.models import User
+
+
+# Create your models here.
+class Paragraph(models.Model):
+    created_at = models.DateTimeField(auto_now_add=True)
+    created_by = models.ForeignKey(User, on_delete=models.CASCADE)
+    title = models.CharField(max_length=255)
+    content = models.TextField()
+
+    def __str__(self):
+        return self.title
+
+
+class Report(models.Model):
+    created_at = models.DateTimeField(auto_now_add=True)
+    created_by = models.ForeignKey(User, on_delete=models.CASCADE)
+    title = models.CharField(max_length=255)
+    description = models.TextField()
+    paragraphs = models.ManyToManyField(Paragraph)
+
+    def __str__(self):
+        return self.title
